--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=8001
+
 ################ Redis 基础配置 ##############
 # Redis数据库索引（默认为0）
 spring.redis.database=0  
@@ -29,4 +31,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/demo?serverTimezone=UTC&useUni
 spring.datasource.username=mydemo
 spring.datasource.password=mydemo
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# uuid配置
+uuid.workerId=1
+uuid.dataCenterId=1
 
