接入swagger, 添加雪花算法

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,3 +36,10 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 uuid.workerId=1
 uuid.dataCenterId=1
 
+# devtools
+# 开启热部署（更改文件后，自动重启）
+spring.devtools.restart.enabled=true
+## 设置哪些资源变动后不触发热部署，会覆盖默认的exclude内容（资源不会触发重启，但会触发实时重新加载）
+#spring.devtools.restart.exclude=exclude: WEB-INF/**,static/**
+## 监控额外的路径（优先于exclude）
+#spring.devtools.restart.additional-paths=additional-paths: src/main/java
